--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "Phaser Editor 2D <developers@phasereditor2d.com> (https://phasereditor2d.com/)",
   "license": "MIT",
   "dependencies": {
-    "phaser": "^3.70.0"
+    "phaser": "^3.70.0",
+    "threejs": "0.159.0"
+    
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
