--- a/package.json
+++ b/package.json
@@ -4,25 +4,22 @@
   "description": "cool game",
   "main": "webpack.config.js",
   "scripts": {
-
     "dev": "esbuild src/main.ts --serve=3000 --servedir=public --bundle --sourcemap --target=es6 --define:__DEV__=true --outfile=public/main.js",
     "prod": "esbuild src/main.ts --serve=3000 --servedir=public --bundle --minify --target=es6 --define:__DEV__=false --outfile=public/main.js",
     "build": "esbuild src/main.ts --bundle --minify --target=es6 --define:__DEV__=false --outfile=public/main.js",
-
     "editor": "phasereditor2d-launcher -project . -port 1959",
     "editor-remote": "phasereditor2d-launcher -project . -disable-open-browser -public -port 1959"
   },
   "author": "Phaser Editor 2D <developers@phasereditor2d.com> (https://phasereditor2d.com/)",
   "license": "MIT",
   "dependencies": {
-    "phaser": "^3.70.0",
-    "threejs": "0.159.0"
-    
+    "phaser": "^3.70.0"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^8.1.0",
     "html-webpack-plugin": "^5.3.1",
+    "jest": "^29.7.0",
     "phaser-asset-pack-hashing": "^1.0.5",
     "phasereditor2d-launcher": "^3.32.0",
     "ts-loader": "^8.0.18",
